correction of Bubble chart

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="row">
       <div class="col-md-12" style="text-align: center;">
-        <p style="font-size: 20px;">This following provides a simple inteface to review data releted to each subject ID within the study in order to provide insight
+        <p style="font-size: 20px;">The following provides a simple inteface to review data releted to each subject ID within the study in order to provide insight
           into various bacteria found in peoples belly button to determine if a replacement bacteria that tastes like beef is present.<br>
           By selecting the subject ID will allow the user to review the resulting data for that subject</p>
         <hr>
