--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="row">
       <div class="col-md-12" style="text-align: center;">
-        <p style="font-size: 20px;">The following provides a simple inteface to review data releted to each subject ID within the study in order to provide insight
+        <p style="font-size: 20px;">The following provides a simple interface to review data related to each subject ID within the study in order to provide insight
           into various bacteria found in peoples belly button to determine if a replacement bacteria that tastes like beef is present.<br>
           By selecting the subject ID will allow the user to review the resulting data for that subject</p>
         <hr>
@@ -44,11 +44,11 @@
       </div>
       <div class="col-md-5" style="text-align: center;">
         <div id="bar"></div>
-        <p style="font-size: 16px;">Displays the top 10 Bacterial specias (OTU) found for the selected inidvidual ID</p>
+        <p style="font-size: 16px;">Displays the top 10 Bacterial species (OTU) found for the selected individual ID</p>
       </div>
       <div class="col-md-5" style="text-align: center;">
         <div id="gauge"></div>
-        <p style="font-size: 16px;">Gauges the frequncy which the seleceted individual ID washes thier belly button</p>
+        <p style="font-size: 16px;">Gauges the frequency which the selected individual ID washes their belly button</p>
       </div>
     </div>
     <div class="row">
